[gd_scene load_steps=3 format=2]

[ext_resource path="res://fotos/kisspng-bubble-sphere-desktop-wallpaper-bubbles-5b042183873532.2831802715269973795538.png" type="Texture" id=1]
[ext_resource path="res://totes_les_bombolles.gd" type="Script" id=2]

[node name="totes_les_bombolles" type="Sprite"]
visible = false
script = ExtResource( 2 )

[node name="bombi_1" type="Sprite" parent="."]
scale = Vector2( 0.36, 0.376 )
texture = ExtResource( 1 )

[node name="bombi_2" type="Sprite" parent="."]
position = Vector2( 100, 0 )
scale = Vector2( 0.36, 0.376 )
texture = ExtResource( 1 )

[node name="bombi_3" type="Sprite" parent="."]
position = Vector2( 200, 0 )
scale = Vector2( 0.36, 0.376 )
texture = ExtResource( 1 )

[node name="bombi_4" type="Sprite" parent="."]
position = Vector2( 300, 0 )
scale = Vector2( 0.36, 0.376 )
texture = ExtResource( 1 )

[node name="bombi_5" type="Sprite" parent="."]
position = Vector2( 400, 0 )
scale = Vector2( 0.36, 0.376 )
texture = ExtResource( 1 )

[node name="bombi_6" type="Sprite" parent="."]
position = Vector2( 500, 0 )
scale = Vector2( 0.36, 0.376 )
texture = ExtResource( 1 )

[node name="bombi_7" type="Sprite" parent="."]
position = Vector2( 600, 0 )
scale = Vector2( 0.36, 0.376 )
texture = ExtResource( 1 )

[node name="bombi_8" type="Sprite" parent="."]
position = Vector2( 700, 0 )
scale = Vector2( 0.36, 0.376 )
texture = ExtResource( 1 )
